# bhtool

./: .gitignore  README.md  pyproject.toml
bhtool/: bumpver.py  clear_chmod.py  cli.py  clr_chmod.py  dfplot.py  list_movies.py  npread.py  psword.py  rm_npm.py  run.py  text.py  text2.py  todict.py  utils.py
btools/: bumpver.py  clear_chmod.py  cli.py  dfplot.py  list_movies.py  npread.py  psword.py  rm_npm.py  run.py  text2.py  todict.py  utils.py
