[project]
name = "btools"
version = "0.1.10"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Bosco Ho", email = "apposite@gmail.com" }
]
dependencies = [
    "path>=16.14.0",
    "semver>=3.0.2",
    "numpy>=1.26.4",
    "click>=8.1.7",
    "ruyaml>=0.91.0",
    "pandas>=2.2.2",
    "matplotlib>=3.9.0",
    "pydash>=8.0.3",
    "cyclopts>=4.10.2",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "microeval>=0.5.0",
]

[project.scripts]
b = "btools.cli:main"
btools = "btools.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.11.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["btools"]

[tool.uv]
package = true
