[project]
name = "bhtool"
version = "0.2.1"
description = "Assorted CLI utilities for Bosco’s workflows (dev, media, macOS, LLM helpers)."
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Bosco Ho", email = "apposite@gmail.com" }
]
dependencies = [
    "path>=16.14.0",
    "numpy>=1.26.4",
    "ruyaml>=0.91.0",
    "pydash>=8.0.3",
    "cyclopts>=4.10.2",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "microeval>=0.5.0",
]

[project.scripts]
b = "bhtool.cli:main"
bhtool = "bhtool.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.11.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["bhtool"]

[tool.uv]
package = true
